--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 全局 API 地址
 # VITE_GLOBAL_API="http://localhost:6688"
-VITE_GLOBAL_API="https://api-hot.imsyy.top"
+VITE_GLOBAL_API="https://daily-hot-api-two-coral.vercel.app"
 
 # ICP 备案号
-VITE_ICP = "豫ICP备2022018134号-1"
+VITE_ICP = "萌备20770101号"
