--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 全局 API 地址
 # VITE_GLOBAL_API="http://localhost:6688"
-VITE_GLOBAL_API="https://daily-hot-api-two-coral.vercel.app"
+VITE_GLOBAL_API="https://new_api.u52.net"
 
 # ICP 备案号
 VITE_ICP = "萌备20770101号"
