--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dailyhot",
-  "description": "今日热榜",
+  "description": "书友会热榜",
   "author": "imsyy",
   "github": "https://github.com/imsyy",
   "version": "1.0.0",
