--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dailyhot",
   "description": "书友会热榜",
   "author": "imsyy",
-  "github": "https://github.com/imsyy",
+  "github": "http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=SHTwqFI2JQSISK_yFdqStmfld4qOqIxY&authKey=Boj8n9dZvuXv62LiTFOFUUowtSRIqGxGBkbNvFtE9xGYP3xwOBei%2Fh%2FGTk279%2B4J&noverify=0&group_code=742247457",
   "version": "1.0.0",
   "private": true,
   "scripts": {
